// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TEST GifGridItem should show component correctly 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    Goku
  </h3>
  <p>
    Cargando
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`TEST GifGridItem should show items when load images -> with useFetchGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    Goku
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="1"
      img={
        Object {
          "id": "1",
          "title": "titulo",
          "url": "https://co.com",
        }
      }
      key="1"
      title="titulo"
      url="https://co.com"
    />
  </div>
</Fragment>
`;
